--- a/example/datamart_demo.ipynb
+++ b/example/datamart_demo.ipynb
@@ -40,8 +40,7 @@
     "import pandas as pd\n",
     "d3mDatamart = D3MDatamart()\n",
     "# this is our original input dataset\n",
-    "inputs_ds_loc = \"/Users/minazuki/Desktop/studies/master/2018Summer/data/customize/\\\n",
-    "DA_poverty_estimation/TRAIN/dataset_TRAIN/datasetDoc.json\"\n",
+    "inputs_ds_loc = \"/Users/pszekely/Downloads/datamart_demo/DA_poverty_estimation/TRAIN/dataset_TRAIN/datasetDoc.json\"\n",
     "# pd.set_option('display.max_columns', None)\n",
     "original_dataset = utils.load_d3m_dataset(inputs_ds_loc)\n"
    ]
