--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "colored-recording",
+   "id": "enormous-devices",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,102 @@
   },
   {
    "cell_type": "markdown",
-   "id": "congressional-namibia",
+   "id": "suspected-justice",
+   "metadata": {},
+   "source": [
+    "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "instant-script",
+   "metadata": {},
+   "source": [
+    "1. On all machines\n",
+    "\n",
+    "    a. edit /etc/sysctl.conf and set vm.max_map_count=262144\n",
+    "    \n",
+    "    b. sudo sysctl --system\n",
+    "    \n",
+    "    c. sudo chmod 666 /var/run/docker.sock"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cross-onion",
+   "metadata": {},
+   "source": [
+    "2. on wikibase02\n",
+    "\n",
+    "```\n",
+    "    docker run -d --name elasticsearch --net novartis-es-network -p 9200:9200 -p 9300:9300 --name elasticsearch \\\n",
+    "    -v /pool/amandeep/elasticsearch.data:/usr/share/elasticsearch/data \\\n",
+    "    -e \"discovery.seed_hosts=wikibase03,wikibase04\" \\\n",
+    "    -e \"node.name=es02\" \\\n",
+    "    -e \"cluster.initial_master_nodes=es04,es02,es03\" \\\n",
+    "    -e \"network.publish_host=wikibase02\" \\\n",
+    "    -e \"ES_JAVA_OPTS=-Xms12g -Xmx12g\" \\\n",
+    "    docker.elastic.co/elasticsearch/elasticsearch:7.12.1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "formed-clause",
+   "metadata": {},
+   "source": [
+    "3. on wikibase03\n",
+    "\n",
+    "```\n",
+    "    docker run -d -p 9200:9200 -p 9300:9300 \\\n",
+    "    -v /pool/amandeep/elasticsearch.data:/usr/share/elasticsearch/data \\\n",
+    "    -e \"discovery.seed_hosts=wikibase02,wikibase04\" \\\n",
+    "    -e \"node.name=es03\" \\\n",
+    "    -e \"cluster.initial_master_nodes=es02,es03,es04\" \\\n",
+    "    -e \"network.publish_host=wikibase03\" \\\n",
+    "    -e \"ES_JAVA_OPTS=-Xms12g -Xmx12g\" \\\n",
+    "    docker.elastic.co/elasticsearch/elasticsearch:7.12.1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "exotic-friendly",
+   "metadata": {},
+   "source": [
+    "4. on wikibase04\n",
+    "\n",
+    "```\n",
+    "    docker run -d -p 9200:9200 -p 9300:9300 \\\n",
+    "    -v /pool/amandeep/elasticsearch.data:/usr/share/elasticsearch/data \\\n",
+    "    -e \"discovery.seed_hosts=wikibase02,wikibase03\" \\\n",
+    "    -e \"node.name=es04\" \\\n",
+    "    -e \"cluster.initial_master_nodes=es04,es02,es03\" \\\n",
+    "    -e \"network.publish_host=wikibase04\" \\\n",
+    "    -e \"ES_JAVA_OPTS=-Xms12g -Xmx12g\" \\\n",
+    "    docker.elastic.co/elasticsearch/elasticsearch:7.12.1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "moved-terrace",
+   "metadata": {},
+   "source": [
+    "5. Check if all three nodes are up and form a cluster\n",
+    "\n",
+    "```\n",
+    "    curl localhost:9200/_cat/nodes?v\n",
+    "    ip         heap.percent ram.percent cpu load_1m load_5m load_15m node.role   master name\n",
+    "    172.16.4.7           33          92  11    2.41    1.07     1.37 cdfhilmrstw -      es03\n",
+    "    172.16.4.8           54          84  10    2.96    1.23     1.61 cdfhilmrstw -      es04\n",
+    "    172.16.4.6           50          97  13    3.00    1.29     1.72 cdfhilmrstw *      es02\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "individual-motor",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -18,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passing-journal",
+   "id": "empty-saint",
    "metadata": {},
    "source": [
     "1. Download the git repository\n",
@@ -56,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upset-charlotte",
+   "id": "economic-gardening",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -65,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "express-fields",
+   "id": "abandoned-calibration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wired-graphic",
+   "id": "golden-maximum",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -86,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "remarkable-transaction",
+   "id": "least-judgment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooperative-calgary",
+   "id": "through-maria",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -106,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "egyptian-cricket",
+   "id": "appreciated-redhead",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-coupon",
+   "id": "champion-prevention",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -269,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "latter-stress",
+   "id": "competent-participation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "shared-oxide",
+   "id": "amended-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "crucial-superintendent",
+   "id": "failing-bibliography",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "molecular-ballet",
+   "id": "private-bargain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharing-brazilian",
+   "id": "natural-headline",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -330,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "private-grill",
+   "id": "combined-complexity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "discrete-bowling",
+   "id": "toxic-sweden",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outstanding-colon",
+   "id": "typical-unknown",
    "metadata": {},
    "outputs": [],
    "source": []
