update instructions for Novartis

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "enormous-devices",
+   "id": "employed-speech",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-justice",
+   "id": "fatal-youth",
    "metadata": {},
    "source": [
     "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instant-script",
+   "id": "varied-bosnia",
    "metadata": {},
    "source": [
     "1. On all machines\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cross-onion",
+   "id": "heard-french",
    "metadata": {},
    "source": [
     "2. on wikibase02\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formed-clause",
+   "id": "south-administration",
    "metadata": {},
    "source": [
     "3. on wikibase03\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exotic-friendly",
+   "id": "arbitrary-filling",
    "metadata": {},
    "source": [
     "4. on wikibase04\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-terrace",
+   "id": "assisted-pocket",
    "metadata": {},
    "source": [
     "5. Check if all three nodes are up and form a cluster\n",
@@ -105,7 +105,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "individual-motor",
+   "id": "cooked-background",
+   "metadata": {},
+   "source": [
+    "6. Create index with mapping file\n",
+    "\n",
+    "```\n",
+    "curl -H \"Content-Type: application/json\" -XPUT http://localhost:9200/wikidatadwd-augmented-01 -d @wikidata_dwd_mapping_es_ver7.json\n",
+    "```\n",
+    "\n",
+    "The mapping file `wikidata_dwd_mapping_es_ver7.json` is present at `/pool/amandeep/wikidata-20210215-dwd` in `wikibase02`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "higher-wrist",
+   "metadata": {},
+   "source": [
+    "7. Load data to elasticsearch index\n",
+    "\n",
+    "Run script `/pool/amandeep/wikidata-20210215-dwd/load_es.sh` (wikibase02). The data files are in the folder `/pool/amandeep/wikidata-20210215-dwd/es_split`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "flexible-india",
+   "metadata": {},
+   "source": [
+    "8. Create Alias for Elasticsearch Index\n",
+    "\n",
+    "```\n",
+    "curl -X POST \"localhost:9200/_aliases?pretty\" -H 'Content-Type: application/json' -d'\n",
+    "{\n",
+    "  \"actions\" : [\n",
+    "    { \"add\" : { \"index\" : \"wikidatadwd-augmented-01\", \"alias\" : \"wikidatadwd-augmented\" } }\n",
+    "  ]\n",
+    "}\n",
+    "'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "integrated-summit",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -113,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empty-saint",
+   "id": "literary-norman",
    "metadata": {},
    "source": [
     "1. Download the git repository\n",
@@ -138,8 +180,8 @@
     "\n",
     "\n",
     "4. Setup environment variables in `docker-compose.yml`\n",
-    "      - WIKIFIER_ES_URL # Elasticsearch URL, http://localhost:9200\n",
-    "      - WIKIFIER_ES_INDEX # Elasticsearch Index, wikidatadwd-augmented-01\n",
+    "      - WIKIFIER_ES_URL # Elasticsearch URL, if ES is running on wikibase02, then set this parameter to http://wikibase02:9200\n",
+    "      - WIKIFIER_ES_INDEX # Elasticsearch Index, wikidatadwd-augmented (use the Alias created in previous steps)\n",
     "5. Bring the wikifier container up\n",
     "\n",
     "```\n",
@@ -151,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-gardening",
+   "id": "digital-nurse",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -160,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abandoned-calibration",
+   "id": "dying-tobago",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "golden-maximum",
+   "id": "common-tracker",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -181,18 +223,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "least-judgment",
+   "id": "civic-proof",
    "metadata": {},
    "outputs": [],
    "source": [
     "wikifier_service_url = \"http://localhost:1703/wikify\"\n",
-    "input_file = '/Users/amandeep/Github/wikidata-wikifier/wikifier/sample_files/cricketers.csv'\n",
+    "input_file = './wikifier/sample_files/cricketers.csv'\n",
     "column_to_wikify = \"cricketers\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "through-maria",
+   "id": "responsible-turtle",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -201,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "appreciated-redhead",
+   "id": "neither-slovakia",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "champion-prevention",
+   "id": "delayed-forwarding",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -364,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "competent-participation",
+   "id": "atlantic-control",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amended-vocabulary",
+   "id": "supreme-demographic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "failing-bibliography",
+   "id": "legendary-partition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "private-bargain",
+   "id": "beginning-display",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "natural-headline",
+   "id": "confident-climb",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -425,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "combined-complexity",
+   "id": "liberal-device",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "toxic-sweden",
+   "id": "physical-editing",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "typical-unknown",
+   "id": "mechanical-pillow",
    "metadata": {},
    "outputs": [],
    "source": []
