update instructions for table linker docker

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "communist-dublin",
+   "id": "academic-messaging",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "north-contributor",
+   "id": "blank-death",
    "metadata": {},
    "source": [
     "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
@@ -18,10 +18,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promising-syntax",
+   "id": "billion-fountain",
    "metadata": {},
    "source": [
-    " 1. On all machines\n",
+    "  1. On all machines\n",
     "\n",
     "    a. edit /etc/sysctl.conf and set vm.max_map_count=262144\n",
     "    \n",
@@ -32,10 +32,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flying-briefs",
+   "id": "negative-court",
    "metadata": {},
    "source": [
-    " 2. on wikibase02\n",
+    "  2. on wikibase02\n",
     "\n",
     "```\n",
     "    docker run -d --name elasticsearch --net novartis-es-network -p 9200:9200 -p 9300:9300 --name elasticsearch \\\n",
@@ -51,10 +51,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "present-hayes",
+   "id": "young-swimming",
    "metadata": {},
    "source": [
-    " 3. on wikibase03\n",
+    "  3. on wikibase03\n",
     "\n",
     "```\n",
     "    docker run -d -p 9200:9200 -p 9300:9300 \\\n",
@@ -70,10 +70,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "color-jungle",
+   "id": "national-george",
    "metadata": {},
    "source": [
-    " 4. on wikibase04\n",
+    "  4. on wikibase04\n",
     "\n",
     "```\n",
     "    docker run -d -p 9200:9200 -p 9300:9300 \\\n",
@@ -89,10 +89,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-willow",
+   "id": "practical-renaissance",
    "metadata": {},
    "source": [
-    " 5. Check if all three nodes are up and form a cluster\n",
+    "  5. Check if all three nodes are up and form a cluster\n",
     "\n",
     "```\n",
     "    curl localhost:9200/_cat/nodes?v\n",
@@ -105,10 +105,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "different-operator",
+   "id": "rural-trunk",
    "metadata": {},
    "source": [
-    " 6. Create index with mapping file\n",
+    "  6. Create index with mapping file\n",
     "\n",
     "```\n",
     "curl -H \"Content-Type: application/json\" -XPUT http://localhost:9200/wikidatadwd-augmented-01 -d @wikidata_dwd_mapping_es_ver7.json\n",
@@ -119,17 +119,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accepted-animation",
+   "id": "several-maker",
    "metadata": {},
    "source": [
-    " 7. Load data to elasticsearch index\n",
+    "  7. Load data to elasticsearch index using table-linker docker\n",
+    "  \n",
+    "  The Dockerfile for table-linker: https://github.com/usc-isi-i2/table-linker/blob/master/Dockerfile\n",
     "\n",
-    "Run script `/pool/amandeep/wikidata-20210215-dwd/load_es.sh` (wikibase02). The data files are in the folder `/pool/amandeep/wikidata-20210215-dwd/es_split`"
+    "```\n",
+    "    git clone https://github.com/usc-isi-i2/table-linker\n",
+    "    cd table-linker\n",
+    "    docker build -t table-linker .\n",
+    "    docker run -it --rm -v <LOCAL_PATH>:/mnt/data   table-linker /bin/bash /mnt/data/load_es.sh\n",
+    "```\n",
+    " \n",
+    "THE LOCAL_PATH is a path on local machine where load_es.sh and the data to be loaded should be present. In load_es.sh the --kgtk-jl-path should be changed to be the docker container path.\n",
+    "\n",
+    "The script path: `/pool/amandeep/wikidata-20210215-dwd/load_es.sh` (wikibase02).\n",
+    "\n",
+    "The data files are in the folder `/pool/amandeep/wikidata-20210215-dwd/es_split`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "national-egyptian",
+   "id": "discrete-colors",
    "metadata": {},
    "source": [
     " 8. Create Alias for Elasticsearch Index\n",
@@ -147,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bronze-cabin",
+   "id": "domestic-captain",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -155,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-council",
+   "id": "fallen-colors",
    "metadata": {},
    "source": [
     " 1. Download the git repository\n",
@@ -193,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cheap-innocent",
+   "id": "stuck-junior",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -202,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "athletic-diesel",
+   "id": "primary-valve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-invite",
+   "id": "nuclear-divorce",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -223,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "pleased-validity",
+   "id": "guilty-approach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southeast-happiness",
+   "id": "individual-aberdeen",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -243,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "metallic-summary",
+   "id": "stunning-circle",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollow-destiny",
+   "id": "compatible-desert",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -406,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "subjective-julian",
+   "id": "painted-gathering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nuclear-bikini",
+   "id": "surgical-zambia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extended-watch",
+   "id": "sonic-atlantic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "detailed-brass",
+   "id": "prescribed-vancouver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescription-monster",
+   "id": "corporate-mouth",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -467,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "conditional-champagne",
+   "id": "enhanced-beijing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "surrounded-criticism",
+   "id": "subtle-country",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "christian-retrieval",
+   "id": "gothic-afghanistan",
    "metadata": {},
    "outputs": [],
    "source": []
