added a note about tmux/screen sessions

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "academic-messaging",
+   "id": "minute-cherry",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blank-death",
+   "id": "illegal-soccer",
    "metadata": {},
    "source": [
     "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "billion-fountain",
+   "id": "urban-generic",
    "metadata": {},
    "source": [
     "  1. On all machines\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "negative-court",
+   "id": "compact-jewelry",
    "metadata": {},
    "source": [
     "  2. on wikibase02\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "young-swimming",
+   "id": "appointed-qatar",
    "metadata": {},
    "source": [
     "  3. on wikibase03\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "national-george",
+   "id": "chronic-fortune",
    "metadata": {},
    "source": [
     "  4. on wikibase04\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-renaissance",
+   "id": "alike-banner",
    "metadata": {},
    "source": [
     "  5. Check if all three nodes are up and form a cluster\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-trunk",
+   "id": "ranking-dubai",
    "metadata": {},
    "source": [
     "  6. Create index with mapping file\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "several-maker",
+   "id": "dedicated-gender",
    "metadata": {},
    "source": [
     "  7. Load data to elasticsearch index using table-linker docker\n",
@@ -142,7 +142,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "discrete-colors",
+   "id": "continuing-kingston",
+   "metadata": {},
+   "source": [
+    "**NOTE**: The above step can take a long time. If running on a server, it is advisable to run the above command in a `tmux` or `screen` session."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "breeding-paper",
    "metadata": {},
    "source": [
     " 8. Create Alias for Elasticsearch Index\n",
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-captain",
+   "id": "patent-slide",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fallen-colors",
+   "id": "cooperative-render",
    "metadata": {},
    "source": [
     " 1. Download the git repository\n",
@@ -206,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuck-junior",
+   "id": "uniform-airplane",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -215,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "primary-valve",
+   "id": "pursuant-matter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nuclear-divorce",
+   "id": "responsible-photograph",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -236,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "guilty-approach",
+   "id": "dutch-occurrence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "individual-aberdeen",
+   "id": "painted-oxford",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -256,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "stunning-circle",
+   "id": "mighty-giant",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compatible-desert",
+   "id": "artificial-possibility",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -419,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "painted-gathering",
+   "id": "comic-archives",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surgical-zambia",
+   "id": "rural-marketplace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sonic-atlantic",
+   "id": "dense-style",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "prescribed-vancouver",
+   "id": "convenient-restriction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-mouth",
+   "id": "interracial-increase",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -480,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "enhanced-beijing",
+   "id": "known-offset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "subtle-country",
+   "id": "killing-chambers",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-afghanistan",
+   "id": "distributed-estimate",
    "metadata": {},
    "outputs": [],
    "source": []
